# PandaKinetics

./: .gitignore  CITATION.cff  CONTRIBUTING.md  INSTALLATION_STEPS.md  MANIFEST.in  README.md  SETUP_README.md  fix_imports.py  folder.py  integrate_enhanced_commands.sh  pandakinetics_applications.md  pyproject.toml  quick_install.py  requirements-dev.txt  requirements.txt  setup.py  setup_instructions.sh  test_boltz_integration.py
benchmarks/: benchmark_results_1_mol.json  benchmark_results_20250623_114843.json  performance_report.md
docker/: Dockerfile  docker-compose.yml
examples/: actual_api_example.py  api_explorer.py  ibuprofen_example.py
examples/ibuprofen_transition_states/: state_000_metadata.json  state_001_metadata.json  state_002_metadata.json  state_003_metadata.json  state_004_metadata.json  state_005_metadata.json  state_006_metadata.json  state_007_metadata.json  state_008_metadata.json  state_009_metadata.json  visualize_pathway.pml
pandakinetics/: __init__.py  types.py
pandakinetics/ai/: __init__.py  barrier_predictor.py  boltz_inspired_affinity.py  enhanced_transition_analysis.py  models.py  sampling.py
pandakinetics/cli/: __init__.py  __init__.py.backup  cli.py  enhanced_commands.py  main.py
pandakinetics/core/: __init__.py  docking.py  enhanced_docking.py  kinetics.py  networks.py
pandakinetics/simulation/: __init__.py  analysis.py  md_interface.py  monte_carlo.py
pandakinetics/utils/: __init__.py  coordinate_generator.py  gpu_utils.py  io_handlers.py  molecular_geometry.py  (+2 more)
scripts/: benchmark.py  run_benchmarks.py  setup_dev.py
(+21 files in other folders)
